Deployment from Codesandbox.

--- a/index.html
+++ b/index.html
@@ -164,6 +164,12 @@
 &lt;/style&gt;
             </code>
           </pre>
+          <p style="padding: 10px;">
+            Si quieres ver el codigo de css que usa esta pagina
+            <a href="https://estructura.scidroid.me/style.css" target="_BLANK"
+              >pulsa aquí</a
+            >
+          </p>
         </article>
       </section>
     </main>
