--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             Para aplicar estilos a una web necesitamos usar CSS, este lo podemos
             escribir dentr de una etiqueta llamada style
           </p>
-          <p>Anatomia de una etiueta de CSS</p>
+          <p>Anatomia de una etiqueta de CSS</p>
           <img
             src="https://mdn.mozillademos.org/files/11925/csspartes.png"
             alt="Anatomia de una etiqueta de CSS"
